globus-authz (3.10-1+gt6.@distro@) @distro@; urgency=low

  * Add OpenSSL build dependency

 -- Globus Toolkit <support@globus.org>  Wed, 29 Oct 2014 12:08:18 -0400

globus-authz (3.10-1+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Include more manpages for API
  * Fix typos and clarify some documentation

 -- Globus Toolkit <support@globus.org>  Wed, 24 Sep 2014 09:55:53 -0400

globus-authz (3.9-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-authz (3.8-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-authz (3.8-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-authz (3.8-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:43 -0400

globus-authz (3.7-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Mon, 21 Apr 2014 11:51:42 -0400

globus-authz (3.6-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Mon, 21 Apr 2014 08:28:07 -0400

globus-authz (3.5-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400

globus-authz (3.4-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:57 -0400

globus-authz (3.4-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:42 -0500

globus-authz (3.4-1+gt6.@distro@) @distro@; urgency=low

  * Test Fixes

 -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 15:05:16 -0500
