@@ -1,6 +1,6 @@
 Name: globus-authz
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_authz-3.10.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_authz-3.11.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
