@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = globus-authz
 _name = globus_authz
-version = 3.10
+version = 3.11
 soname = 0
 
 INSTALLDIR = $(CURDIR)/debian/tmp
