@@ -1,3 +1,9 @@
+globus-authz (3.11-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix paths for mingw tests
+
+ -- Globus Toolkit <support@globus.org>  Fri, 20 Nov 2015 20:14:34 -0500
+
 globus-authz (3.10-1+gt6.@distro@) @distro@; urgency=low
 
   * Add OpenSSL build dependency
